# NLP_project

./: .gitignore  LICENSE  README.md  preprocessing.py  pyproject.toml  theme_generation_basic.py  topic_modelling.py
notebooks/: RQ-3.ipynb  RQ1.ipynb  RQ3-basic.ipynb  RQ3.ipynb  data_exploration.ipynb  research_question_1.ipynb  rq_2_raf.ipynb
src/: preporcessing.py  preprocessing.py  settings.py  theme_generation_basic.py  topic_modelling.py
