[project]
name = "ti3160tu-nlp-group-project"
version = "0.1.0"
description = "An NLP analysis of the subreddit r/AmItheAsshole"
readme = "README.md"
authors = [
    { name = "MartijnBoonen", email = "martijnboonen60@gmail.com" },
    { name = "oThommy", email = "tvdhil@datho.com" },
    { name = "RvdKar", email = "rafvandekar@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "nltk>=3.9.2",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "polars>=1.35.1",
    "scikit-learn>=1.7.2",
    "spacy>=3.8.7",
    "tldextract>=5.3.0",
    "tqdm>=4.67.1",
]
